# tarty

./: .gitignore  .pre-commit-config.yaml  CONVENTIONS.md  Makefile  README.md  pyproject.toml  tarty.py  tarty_test.py
